prevent scroll when cart is visible

--- a/src/scss/helpers/helpers.scss
+++ b/src/scss/helpers/helpers.scss
@@ -30,7 +30,6 @@
   transform-origin: bottom left;
 }
 
-html.no-scroll,
-html.no-scroll body {
+html.no-scroll {
   overflow: hidden;
 }
